[package]
name = "os"
version = "0.1.0"
authors = ["elliott10 <xiaoluoyuan@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
riscv = { git = "https://github.com/rcore-os/riscv", features = ["inline-asm"] }
k210-hal = { git = "https://github.com/riscv-rust/k210-hal" }

