[package]
name = "os"
version = "0.1.0"
authors = ["elliott10 <xiaoluoyuan@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
link_kdbg = []

[dependencies]
object = { version = "0.23.0", default-features = false, features = ["read_core", "elf"]}
addr2line = { version = "0.14.1", default-features = false, features = ["rustc-demangle"]}
log = "0.4"
spin = "0.9"
buddy_system_allocator = "0.6.0"
#buddy_system_allocator = { path = "/home/xly/rust/arch-lib/buddy_system_allocator" }
# 增加打印log信息会出错？

rcore-fs = { git = "https://github.com/rcore-os/rcore-fs", rev = "6df6cd24" }
rcore-fs-sfs = { git = "https://github.com/rcore-os/rcore-fs", rev = "6df6cd24" }
fatfs = { git = "https://github.com/rafalh/rust-fatfs.git", rev = "26fa79", default-features = false }

riscv = { git = "https://github.com/rcore-os/riscv", features = ["inline-asm"] }
k210-hal = { git = "https://github.com/riscv-rust/k210-hal" }

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

